<resources>
    <string name="app_name">identity</string>
    <string name="mobile_number">Give us your \nmobile number</string>
    <string name="mobile_number2">Mobile number needed to be verified</string>
    <string name="mobile_number3">9999999999</string>
    <string name="mobile_number4">By clicking you accept to\nterms and conditions</string>

    <string name="accept_amp_continue"><![CDATA[Accept & Continue]]></string>
    <string name="email_id">Give us your \nEmail ID</string>
    <string name="email_id2">Email Id needs to be verified</string>
    <string name="email_id3">abc@gmail.com</string>
    <string name="email_id4">OTP will be sent to your email id</string>
    <string name="expiry">Expiry Date</string>
    <string name="value">Value</string>
    <string name="accept_amp_continue_email"><![CDATA[Verify Email]]></string>

    <string name="sent_email_id">We have sent an email \nto your registered email id</string>

    <string name="sent_mobile_number">We have sent a message \nto your Mobile Number</string>
    <string name="enter_otp">Enter OTP received</string>
    <string name="single_digit">0</string>
    <string name="verify_otp"><![CDATA[Verify OTP]]></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
