<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#11141B"

tools:context=".email_input">


<TextView
    android:id="@+id/t1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="76dp"
    android:text="@string/email_id"
    android:textColor="#7F99A7"
    android:textSize="20sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/t2"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginLeft="40dp"
    android:layout_marginTop="16dp"
    android:text="@string/email_id2"
    android:textColor="#4F5761"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/t1" />

    <EditText
        android:id="@+id/letter1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:background="@null"
        android:hint="@string/email_id3"
        android:inputType="textEmailAddress"

        android:textColor="#ffffff"
        android:textColorHint="#292C35"
        android:textCursorDrawable="@drawable/blue_cursor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="674dp"
    android:layout_marginTop="200dp"
    android:topLeftRadius="2dp"
    android:id="@+id/accept"
    app:layout_constraintCircleRadius="2dp"
    android:layout_marginLeft="10dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/letter1"
    android:background="#141821"
    >

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"

        android:layout_marginTop="21dp"
        android:text="@string/email_id4"
        android:textColor="#4F535C"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/verify_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="32dp"

        android:onClick="go"
        android:text="@string/accept_amp_continue_email"
        app:layout_constraintCircleRadius="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>