<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#11141B"

tools:context=".verify_mobile">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:weightSum="10">
<LinearLayout
    android:layout_width="match_parent"
    android:id="@+id/linearl1"
    android:orientation="vertical"
    android:layout_height="0dp"
    android:layout_weight="4">

    <TextView
        android:id="@+id/t1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="30dp"
        android:paddingTop="40dp"

        android:text="@string/sent_mobile_number"

        android:textColor="#4F5761"
        android:textSize="20sp"
         />

    <TextView
        android:id="@+id/t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="30dp"
        android:paddingTop="40dp"

        android:text="@string/enter_otp"
        android:textColor="#7F99A7"
        android:textSize="25sp"
         />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:layout_constraintTop_toBottomOf="@+id/linearl1"
       >
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"></LinearLayout>
        <EditText
            android:id="@+id/letter1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.5"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/single_digit"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#ffffff"
            android:textColorHint="#292C35"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textSize="40sp"
             />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></LinearLayout>
        <EditText
            android:id="@+id/letter2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.5"

            android:background="@drawable/border"

            android:gravity="center"
            android:hint="@string/single_digit"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#ffffff"
            android:textColorHint="#292C35"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/letter1"
            app:layout_constraintTop_toTopOf="@+id/letter1" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></LinearLayout>
        <EditText
            android:id="@+id/letter3"
            android:layout_width="0dp"
            android:layout_height="60dp"

            android:background="@drawable/border"
            android:gravity="center"
            android:layout_weight="1.5"
            android:hint="@string/single_digit"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#ffffff"
            android:textColorHint="#292C35"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/letter2"
            app:layout_constraintTop_toTopOf="@+id/letter1" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"></LinearLayout>
        <EditText
            android:id="@+id/letter4"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1.5"
            android:background="@drawable/border"
            android:gravity="center"
            android:hint="@string/single_digit"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="#ffffff"
            android:textColorHint="#292C35"
            android:textCursorDrawable="@drawable/blue_cursor"
            android:textSize="40sp"
            app:layout_constraintStart_toEndOf="@+id/letter3"
            app:layout_constraintTop_toTopOf="@+id/letter1" />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="match_parent"></LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#141821"
        android:topLeftRadius="2dp"
        app:layout_constraintCircleRadius="2dp"
        android:layout_weight="2"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="match_parent"
            android:weightSum="10">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:layout_height="match_parent"></LinearLayout>

            <Button
                android:id="@+id/verify_mobile"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="10dp"
                android:onClick="go"
                android:text="@string/verify_otp"
                app:layout_constraintCircleRadius="1dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:layout_height="match_parent"></LinearLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>